projects/examples/source/02.20.cpp
/////////////////////////////////////////////////////////////////////

// chapter : Basics of Programming

/////////////////////////////////////////////////////////////////////

// section : Operators and Expressions

/////////////////////////////////////////////////////////////////////

// content : Iteration Statements
//
// content : Statement for
//
// content : Function std::size

/////////////////////////////////////////////////////////////////////

#include <initializer_list>
#include <print>

/////////////////////////////////////////////////////////////////////

int main()
{
	for (auto i = 0uz; i < 5; ++i) // support : compiler-explorer.com
	{
		std::print("main : i = {}\n", i);
	}

//  -----------------------------------------------------------------

	std::initializer_list < int > list = { 1, 2, 3, 4, 5 };

//  -----------------------------------------------------------------

//	for (auto i = 0; i < std::size(list); ++i) // error
//	{
//		std::print("main : i = {}\n", i);
//	}

//  -----------------------------------------------------------------

//	for (auto i = 5uz; i >= 0; --i) // error
//	{
//		std::print("main : i = {}\n", i);
//	}

//  -----------------------------------------------------------------

	for (auto i = 0uz, j = 0uz; i < 5; ++i, j += 2)
	{
		std::print("main : i = {} j = {}\n", i, j);
	}

//  -----------------------------------------------------------------

	for (auto i = 0uz; [[maybe_unused]] auto x = i < 5; ++i)
	{
		std::print("main : i = {}\n", i);
	}
}

/////////////////////////////////////////////////////////////////////